--- a/responsive.css
+++ b/responsive.css
@@ -55,15 +55,11 @@
         margin-bottom: 2rem;
     }
 
-    .link-home-page {
-        font-size: 1.3rem;
+    .link-home-page, .navigation-link {
+        font-size: 1.5rem;
         text-align: center;
         display: block;
         width: 100%;
-    }
-
-    .navigation-link {
-        font-size: 1.5rem;
     }
 
     .navigation-link:hover {
